major changes --  see email